git pages deploy

--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: async
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/ygwlg/ygwlg.github.io/
+  branch: main
